2007-11-02  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/media-renderer-proxy.c:
	* src/av-cp/media-renderer-proxy.h:
	* src/av-cp/media-server-proxy.c:
	* src/av-cp/media-server-proxy.h:
	* src/av-cp/xml-util.c:
	* src/av-cp/xml-util.h:
	* src/av-cp/Makefile.am:
	* src/av-cp/av-cp-playlisttreeview.c:
	* src/av-cp/av-cp-playlisttreeview.h:
	* src/av-cp/av-cp-renderercombo.c:
	* src/av-cp/av-cp-renderercombo.h:
	* src/av-cp/av-cp.c:
	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:
	* src/av-cp/didl-lite-parser.c:
	* src/av-cp/didl-lite-parser.h:

	Remove and Update stuff according to the recent move of generic
	AV components to gupnp-av.

2007-11-02  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* configure.ac:

	Require libgupnp-av.

2007-11-01  Zeeshan Ali Khan Khattak  <zeenix@gstreamer.net>

	* src/av-cp/xml-util.c:
	* src/av-cp/xml-util.h:

	Add a few xml utility functions.

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Implement the rest of the DIDL-Lite object API.

2007-10-30  Zeeshan Ali Khan Khattak  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Add didl_lite_object_get_value() on popular demand. :)

2007-10-28  Zeeshan Ali Khan Khattak  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Instead of a gobject, provide an API to deal with the DIDL-Lite xml
	nodes. 

	* src/av-cp/didl-lite-parser.c:
	* src/av-cp/didl-lite-parser.h:
	* src/av-cp/media-server-proxy.c:
	* src/av-cp/av-cp-playlisttreeview.c:

	Use the new didl_lite_object API.

2007-10-23  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	Assume the parent of a DIDL object to be root if it's "parentID" is
	not known to us already. This is to support the ContentDirectory
	implemenations (e.g Coherence) that assigns an id other than "0" to
	the root DIDL object.

2007-10-22  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/common/icons.c:
